# learn-ann

./: .gitignore  layer.py  main.py  network.py  pyproject.toml  util.py
src/: main.py
src/ann/: layer.py  network.py
