[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ann"
version = "0.1.0"
description = "artificial neural network"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]
